<resources>
    <string name="app_name">Music Video Recorder</string>
    <string name="setup_title">Setup</string>
    <string name="resolution_label">Resolution</string>
    <string name="pick_audio">Choose Audio File</string>
    <string name="no_audio_selected">No audio file selected</string>
    <string name="start_session">Start Recording</string>
    <string name="tap_to_record">Tap to record a clip</string>
    <string name="end_session">Finish &amp; Export</string>
    <string name="processing">Stitching your video…</string>
    <string name="clips_recorded">Clips recorded: %1$d</string>
</resources>
